--- a/public/profile.html
+++ b/public/profile.html
@@ -724,10 +724,10 @@
         /* 🎯 СИСТЕМА ДОСТИЖЕНИЙ - ДЕТЕКТИВНЫЕ КАРТОЧКИ */
         .achievements-scroll {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-            gap: 16px;
-            padding: 12px;
-            max-height: 450px;
+            grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+            gap: 18px;
+            padding: 16px;
+            max-height: 500px;
             overflow-y: auto;
         }
 
@@ -742,7 +742,7 @@
                     rgba(139, 0, 0, 0.1) 4px);
             border: 2px solid #DC143C;
             border-radius: 12px;
-            padding: 14px 12px;
+            padding: 16px 14px;
             cursor: pointer;
             position: relative;
             transition: all 0.3s ease;
@@ -752,12 +752,10 @@
                 inset 0 1px 0 rgba(255, 255, 255, 0.15),
                 0 2px 8px rgba(0, 0, 0, 0.8);
             text-align: center;
-            min-height: 120px;
-            max-height: 140px;
+            height: 180px;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            aspect-ratio: 1 / 1.1;
         }
 
         /* Эффект бумаги */
@@ -884,8 +882,8 @@
 
         /* Иконка достижения */
         .achievement-icon {
-            font-size: 2rem;
-            margin-bottom: 8px;
+            font-size: 2.2rem;
+            margin-bottom: 10px;
             display: block;
             filter: drop-shadow(0 3px 6px rgba(0, 0, 0, 0.8));
             transition: all 0.3s ease;
@@ -904,11 +902,11 @@
         /* Название достижения */
         .achievement-name {
             font-family: 'JetBrains Mono', monospace;
-            font-size: 0.75rem;
+            font-size: 0.8rem;
             font-weight: 800;
             color: #FFFFFF;
-            line-height: 1.2;
-            margin-bottom: 6px;
+            line-height: 1.3;
+            margin-bottom: 8px;
             text-transform: uppercase;
             letter-spacing: 0.5px;
             text-shadow:
@@ -923,11 +921,11 @@
 
         /* Краткое описание */
         .achievement-summary {
-            font-size: 0.65rem;
+            font-size: 0.72rem;
             color: #F0F0F0;
             opacity: 0.95;
-            line-height: 1.3;
-            margin-bottom: 6px;
+            line-height: 1.4;
+            margin-bottom: 10px;
             text-align: center;
             flex-grow: 1;
             font-weight: 500;
@@ -1368,6 +1366,33 @@
 
             .stat-value {
                 font-size: 1.8rem;
+            }
+
+            /* Мобильные достижения */
+            .achievements-scroll {
+                grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+                gap: 14px;
+                padding: 12px;
+            }
+
+            .achievement-item {
+                height: 160px;
+                padding: 12px 10px;
+            }
+
+            .achievement-icon {
+                font-size: 1.8rem;
+                margin-bottom: 8px;
+            }
+
+            .achievement-name {
+                font-size: 0.7rem;
+                margin-bottom: 6px;
+            }
+
+            .achievement-summary {
+                font-size: 0.65rem;
+                margin-bottom: 8px;
             }
         }
 
