\enhance achievements UI: compact design and fix emoji positioning in modal\

--- a/public/profile.html
+++ b/public/profile.html
@@ -2271,9 +2271,13 @@
 
             <!-- 🏷️ Шапка файла дела -->
             <div class="achievement-modal-header">
-                <div class="achievement-modal-icon" id="modal-icon">🏆</div>
-                <div class="achievement-case-number" id="modal-case-number">ДЕЛО №AC-001</div>
-                <div class="achievement-modal-title" id="modal-title">НАЗВАНИЕ ДОСТИЖЕНИЯ</div>
+                <div class="achievement-modal-header-content">
+                    <div class="achievement-modal-icon" id="modal-icon">🏆</div>
+                    <div class="achievement-modal-text">
+                        <div class="achievement-case-number" id="modal-case-number">ДЕЛО №AC-001</div>
+                        <div class="achievement-modal-title" id="modal-title">НАЗВАНИЕ ДОСТИЖЕНИЯ</div>
+                    </div>
+                </div>
             </div>
 
             <!-- 📄 Содержимое дела -->
